--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ python = "^3.11"
 fastapi = "^0.110.1"
 uvicorn = {extras = ["standard"], version = "^0.29.0"}
 pydantic = "^2.6.4"
+sqlalchemy = "^2.0.29"
+asyncpg = "^0.29.0"
+alembic = "^1.13.1"
 
 
 [build-system]
