--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pydantic = "^2.6.4"
 sqlalchemy = "^2.0.29"
 asyncpg = "^0.29.0"
 alembic = "^1.13.1"
+pydantic-settings = "^2.2.1"
 
 
 [build-system]
