--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,11 @@ sqlalchemy = "^2.0.29"
 asyncpg = "^0.29.0"
 alembic = "^1.13.1"
 pydantic-settings = "^2.2.1"
+jupyter = "^1.0.0"
 
+
+[tool.poetry.group.dev.dependencies]
+faker = "^24.8.0"
 
 [build-system]
 requires = ["poetry-core"]
